--- a/online_Hall_Booking/Views/Order/Edit.cshtml
+++ b/online_Hall_Booking/Views/Order/Edit.cshtml
@@ -9,52 +9,58 @@
 
 <h4>hallOrder</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ordId" />
-            <div class="form-group">
+<div class="d-flex justify-content-center">
+  
+    <form asp-action="Edit">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="ordId" />
+        <div class="form-row">
+            <div class="form-group col-md-6">
                 <label asp-for="createdAt" class="control-label"></label>
                 <input asp-for="createdAt" class="form-control" />
                 <span asp-validation-for="createdAt" class="text-danger"></span>
             </div>
-           
-            <div class="form-group">
+            <div class="form-group col-md-6">
                 <label asp-for="personCount" class="control-label"></label>
                 <input asp-for="personCount" class="form-control" />
                 <span asp-validation-for="personCount" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-6">
                 <label asp-for="totalAmount" class="control-label"></label>
                 <input asp-for="totalAmount" class="form-control" />
                 <span asp-validation-for="totalAmount" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="receivedAmount" class="control-label"></label>
-                <input asp-for="receivedAmount" class="form-control" />
-                <span asp-validation-for="receivedAmount" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Discount" class="control-label"></label>
-                <input asp-for="Discount" class="form-control" />
-                <span asp-validation-for="Discount" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="type" class="control-label"></label>
-                <input asp-for="type" class="form-control" />
-                <span asp-validation-for="type" class="text-danger"></span>
-            </div>
-            
 
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                    <label asp-for="receivedAmount" class="control-label"></label>
+                    <input asp-for="receivedAmount" class="form-control" />
+                    <span asp-validation-for="receivedAmount" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label asp-for="Discount" class="control-label"></label>
+                    <input asp-for="Discount" class="form-control" />
+                    <span asp-validation-for="Discount" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label asp-for="type" class="control-label"></label>
+                    <input asp-for="type" class="form-control" />
+                    <span asp-validation-for="type" class="text-danger"></span>
+                </div>
+
             </div>
-        </form>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                    </div>
+                    <div class="form-group col-md-6">
+                        <a asp-action="Index" class="btn btn-warning">Back to Orders</a>
+                    </div>
+                </div>
+    </form>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
+
 
