--- a/online_Hall_Booking/Views/Product/Index.cshtml
+++ b/online_Hall_Booking/Views/Product/Index.cshtml
@@ -11,15 +11,16 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
 
-               
-                <img class="d-block w-100" src="~/hall/cover/e3047c7a-359b-4641-9faa-69aba5b8c2a2_cover6.jpg" style="height:500px"  alt="First slide">
+
+                <img class="d-block w-100" src="~/banner/up-do  curled  straightened hair full face makeup airbrush foundation.png" style="height:500px" alt="First slide">
             </div>
             <div class="carousel-item">
-               
-                <img class="d-block w-100" src="~/hall/Logo/d22fbe28-b974-492c-90e6-ae3be94c95c7_cover1.jpg"   style="height:500px" alt="Second slide">
+              
+                <img class="d-block w-100" src="~/banner/3.png"  style="height:500px" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="~/hall/cover/6d73af38-5ebb-4a80-8504-7fc4fa8851f1_cover3.jpg"  style="height:500px"  alt="Third slide">
+                
+                <img class="d-block w-100" src="~/banner/up-do  curled  straightened hair full face makeup airbrush foundation (4).png" style="height:500px" alt="Third slide">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
