--- a/online_Hall_Booking/Views/Product/Index.cshtml
+++ b/online_Hall_Booking/Views/Product/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<online_Hall_Booking.Models.Hall>
+﻿@using X.PagedList.Mvc.Core; <!--import to get HTML Helper-->
+@using X.PagedList;
+
+@model IEnumerable<online_Hall_Booking.Models.Hall>
 
 @{
     ViewData["Title"] = "Index";
@@ -6,51 +9,61 @@
 }
 
 
-    <div id="carouselExampleControls" style="margin-left:40px; margin-right:40px; margin-bottom :100px; margin-top:40px" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleControls" style="margin-left:40px; margin-right:40px; margin-bottom :100px; margin-top:40px" class="carousel slide" data-ride="carousel">
 
-        <div class="carousel-inner">
-            <div class="carousel-item active">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
 
 
-                <img class="d-block w-100" src="~/banner/up-do  curled  straightened hair full face makeup airbrush foundation.png" style="height:500px" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              
-                <img class="d-block w-100" src="~/banner/3.png"  style="height:500px" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                
-                <img class="d-block w-100" src="~/banner/up-do  curled  straightened hair full face makeup airbrush foundation (4).png" style="height:500px" alt="Third slide">
-            </div>
+            <img class="d-block w-100" src="~/banner/up-do  curled  straightened hair full face makeup airbrush foundation.png" style="height:500px" alt="First slide">
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        <div class="carousel-item">
+
+            <img class="d-block w-100" src="~/banner/3.png" style="height:500px" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+
+            <img class="d-block w-100" src="~/banner/up-do  curled  straightened hair full face makeup airbrush foundation (4).png" style="height:500px" alt="Third slide">
+        </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
 
 
 
 <div class="card-group  " style="margin-bottom:40px; margin-left:20px; ">
 
-    
+
     @foreach (var item in Model)
     {
-    <div class="col-3">
-        <div class="card h-100 text-white bg-dark mb-3" style="max-width: 18rem;">
-            <img class="card-img-top   " src="~/hall/cover/@item.CoverImageUrl" style="height:300px" alt="Card image cap">
+        <div class="col-3">
+            <div class="card h-100 text-white bg-dark mb-3" style="max-width: 18rem;">
+                <img class="card-img-top   " src="~/hall/cover/@item.CoverImageUrl" style="height:300px" alt="Card image cap">
 
-            <div class="card-body">
-                <h5 class="card-title">@item.Name</h5>
-                <p class="card-text">@item.decription</p>
-                <a asp-action="Details" asp-route-id="@item.hId" class="btn btn-primary">View Details</a>
+                <div class="card-body">
+                    <h5 class="card-title">@item.Name</h5>
+                    <p class="card-text">@item.decription</p>
+                    <a asp-action="Details" asp-route-id="@item.hId" class="btn btn-primary">View Details</a>
+                </div>
             </div>
         </div>
-    </div>
     }
 
+</div>
+<div style="margin-left:50px">
+    @Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page = page }),
+        new X.PagedList.Mvc.Common.PagedListRenderOptions
+        {
+
+            ContainerDivClasses = new[] { "navigation" },
+            LiElementClasses = new[] { "page-item" },
+            PageClasses = new[] { "page-link" },
+        })
 </div>
