--- a/online_Hall_Booking/Views/Shared/CustomerLTE/_Layout_Customer.cshtml
+++ b/online_Hall_Booking/Views/Shared/CustomerLTE/_Layout_Customer.cshtml
@@ -15,67 +15,67 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 </head>
 <body>
-    
-        <nav class="navbar navbar-expand-md navbar-light bg-dark " >
 
-            <a class="navbar-brand"><img src="img/dish.png"></a>
+    <nav class="navbar navbar-expand-md navbar-light bg-dark ">
 
-            <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav">
+        <a class="navbar-brand"><img src="img/dish.png"></a>
 
-                <span class="navbar-toggler-icon"></span>
+        <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav">
 
-            </button>
+            <span class="navbar-toggler-icon"></span>
 
-            <div class="collapse navbar-collapse justify-content-between" id="nav">
+        </button>
 
-                <ul class="navbar-nav">
+        <div class="collapse navbar-collapse justify-content-between" id="nav">
 
-                    <li class="nav-item">
+            <ul class="navbar-nav">
 
-                        <a class="nav-link text-light font-weight-bold px-3" asp-action="Index" asp-controller="Product">HOME</a>
+                <li class="nav-item">
 
-                    </li>
+                    <a class="nav-link text-light font-weight-bold px-3" asp-action="Index" asp-controller="Product">HOME</a>
 
-
-
-                    <li class="nav-item">
-
-                        <a class="nav-link text-light font-weight-bold px-3" asp-action="Aboutus" asp-controller="Home">ABOUT US</a>
-
-                    </li>
-
-                    <li class="nav-item">
-
-                        <a class="nav-link text-light font-weight-bold px-3" asp-action="ContactUs" asp-controller="Home">CONTACT</a>
-
-                    </li>
-                    
-                </ul>
+                </li>
 
 
-                <!-- Search bar -->
 
-                <form class="form-inline my-2 my-lg-0" asp-action="Search" asp-controller="Product" method="get">
-                    <input class="form-control mr-sm-2" type="search" name="SearchString" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
-                </form>
-                <ul class="navbar-nav ">
-                    <li class="nav-item ">
+                <li class="nav-item">
 
-                        <a class="nav-link text-light font-weight-bold px-3" asp-area="Identity" asp-page="/Account/Login"><i class="fa fa-sign-in"></i> Login</a>
+                    <a class="nav-link text-light font-weight-bold px-3" asp-action="Aboutus" asp-controller="Home">ABOUT US</a>
 
-                    </li>
+                </li>
 
-                    <li class="nav-item">
+                <li class="nav-item">
 
-                        <a class="nav-link text-light font-weight-bold px-3" asp-area="Identity" asp-page="/Account/Register"><i class="fa fa-user-plus"></i> SignUp</a>
+                    <a class="nav-link text-light font-weight-bold px-3" asp-action="ContactUs" asp-controller="Home">CONTACT</a>
 
-                    </li>
-                </ul>
-            </div>
+                </li>
 
-        </nav>
-    
+            </ul>
+
+
+            <!-- Search bar -->
+
+            <form class="form-inline my-2 my-lg-0" asp-action="Search" asp-controller="Product" method="get">
+                <input class="form-control mr-sm-2" type="search" name="SearchString" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
+            </form>
+            <ul class="navbar-nav ">
+                <li class="nav-item ">
+
+                    <a class="nav-link text-light font-weight-bold px-3" asp-area="Identity" asp-page="/Account/Login"><i class="fa fa-sign-in"></i> Login</a>
+
+                </li>
+
+                <li class="nav-item">
+
+                    <a class="nav-link text-light font-weight-bold px-3" asp-area="Identity" asp-page="/Account/Register"><i class="fa fa-user-plus"></i> SignUp</a>
+
+                </li>
+            </ul>
+        </div>
+
+    </nav>
+
 
 
     <div>
@@ -140,6 +140,18 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    @section Scripts{
+        <script>
+        // Workaround to fix style of text for showing items .. through ..
+        // Problem related to Boostrap 4 according to issue in link below
+        // https://github.com/dncuug/X.PagedList/issues/127
+        $(document).ready(function () {
+            $('ul.pagination > li.disabled > a').addClass('page-link');
+        });
+        </script>
+    }
+   
+
     @await Component.InvokeAsync("Notyf")
 </body>
 </html>
