--- a/online_Hall_Booking/Views/Product/Index.cshtml
+++ b/online_Hall_Booking/Views/Product/Index.cshtml
@@ -57,7 +57,7 @@
     }
 
 </div>
-<div style="margin-left:50px">
+<div style="margin-left:50px; font-size:18px; letter-spacing:8px; margin-right:50px">
     @Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page = page }),
         new X.PagedList.Mvc.Common.PagedListRenderOptions
         {
